<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_gray_radius10"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/btn_1"
                style="@style/BoldText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/DeleteAddress"
                android:textColor="#E21D03"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/btn_2"
                style="@style/BoldText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/SetAddressDef"
                android:textColor="@color/colorAccent"
                android:textSize="15dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_3"
            style="@style/BoldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_gray_radius10"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/Cancel"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />

    </LinearLayout>

</RelativeLayout>