<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@color/green"
    android:layoutDirection="inherit"
    android:paddingTop="5dp"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/ll_profile"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/Account"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_basket"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2">

        <ImageView
            android:id="@+id/iv_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/shopping_cart" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_basket"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/CartMenu"
            android:textColor="@color/white"
            android:textSize="15dp" />


        <TextView
            android:id="@+id/tv_basketCount"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/red_round"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_offers"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/offers" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/Offers2"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_categories"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/groups" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/Cats"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="الرئيسية"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>
</LinearLayout>