<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:layoutDirection="ltr">

    <RelativeLayout
        android:id="@+id/ActionBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/CancelAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:src="@mipmap/cancel" />

        <ImageView
            android:id="@+id/Finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CancelAll"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@mipmap/finish" />

        <RelativeLayout
            android:id="@+id/Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Finish"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_End"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:text="@string/Ended"
                android:textColor="#313131"
                android:textSize="27sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_Finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Price"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:paddingRight="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/FinishOrder"
            android:textColor="#313131"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_Continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_Finish"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_blue_radius10"
            android:elevation="2dp"
            android:text="@string/ContinueShopping"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/HideAll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@mipmap/hide"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>
