<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <include
            android:id="@+id/Header"
            layout="@layout/activity_header2" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/Header"
            android:layout_margin="20dp"
            android:fillViewport="true"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp">


                <TextView
                    android:id="@+id/Enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="right"
                    android:text="@string/Contact2"
                    android:textColor="#363E4B"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:id="@+id/Mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Enter">

                    <EditText
                        android:id="@+id/edit_Key"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:background="@drawable/border_bottom"
                        android:cursorVisible="true"
                        android:drawableRight="@mipmap/ic_call"
                        android:ems="10"
                        android:gravity="left|center_vertical"
                        android:hint="+965"
                        android:inputType="phone"
                        android:paddingLeft="3dp"
                        android:paddingTop="25dp"
                        android:paddingBottom="10dp"
                        android:text="+965"
                        android:textColor="#18151B"
                        android:textColorHint="#9d9d9d"
                        android:textCursorDrawable="@color/colorHeader"
                        android:textSize="14sp"
                        android:textStyle="bold"></EditText>

                    <EditText
                        android:id="@+id/edit_Mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/border_bottom"
                        android:cursorVisible="true"
                        android:drawableRight="@mipmap/ic_call"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:gravity="right|center_vertical"
                        android:hint="@string/Mobile"
                        android:inputType="phone"
                        android:paddingTop="25dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="#18151B"
                        android:textColorHint="#9d9d9d"
                        android:textCursorDrawable="@color/colorHeader"
                        android:textSize="14sp"
                        android:textStyle="bold"></EditText>


                </LinearLayout>

                <EditText
                    android:id="@+id/edit_Msg"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@+id/Mobile"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:background="#F3F3F3"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/Msg"
                    android:padding="5dp"
                    android:textColor="#18151B"
                    android:textColorHint="#BBBBBB"
                    android:textSize="16sp"
                    android:textStyle="bold"></EditText>

                <RelativeLayout
                    android:id="@+id/More"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_Msg"
                    android:layout_marginTop="240dp"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/ForMore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:ellipsize="start"
                        android:text="@string/ForMore"
                        android:textColor="#363E4B"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@+id/ForMore"
                        android:drawableLeft="@mipmap/ic_call_fill"
                        android:drawablePadding="10dp"
                        android:ellipsize="start"
                        android:text=""
                        android:textColor="#006ED1"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btn_Send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/More"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_blue_radius10"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp"
                    android:text="@string/Send"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <ImageView
        android:id="@+id/HideAll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@mipmap/hide"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>

